logs/Slang/generated/keywords/5.6.2--keyword_wor.sv.log
name: keyword_wor
description: The 'wor' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_wor.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_wor.sv:8:8: error: expected declarator
    bit wor;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_wor.sv:8:12: error: expected declarator
    bit wor;
           ^
